--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">Welcome To JERIAC</h5>
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Best Solar Installation and Maintenance Services</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">With years of expertise in the solar industry, we offer top-notch solar installation and maintenance services that ensure your energy systems are always running at peak efficiency. Trust us to deliver seamless integration of solar power into your home or business, backed by our commitment to quality and customer satisfaction.</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Free Quote</a>
+                                <a href="about.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                                <a href="quote.html" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Free Quote</a>
                             </div>
                         </div>
                     </div>
@@ -132,8 +132,8 @@
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">Welcome To JERIAC</h5>
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Best Solar Trainer manufacturer in Nigeria</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">We are proud to be Nigeria's leading manufacturer of high-quality solar trainers, designed for educational institutions, training centers, and renewable energy enthusiasts. Our solar trainers are engineered to provide hands-on learning experiences, enabling students and professionals to understand the intricacies of solar technology. With our cutting-edge designs and commitment to quality, we are setting the standard for solar education across the country.</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Free Quote</a>
+                                <a href="about.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                                <a href="quote.html" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Free Quote</a>
                             </div>
                         </div>
                     </div>
@@ -148,8 +148,8 @@
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">Welcome To JERIAC</h5>
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Your Trusted Partner in Renewable Energy Solutions</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">At JERIAC, we are more than just a service provider; we are your partner in the journey towards sustainable energy. From custom solar trainer kits to comprehensive solar power installations, we offer a full range of products and services designed to empower a cleaner, greener future.</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Free Quote</a>
+                                <a href="about.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                                <a href="quote.html" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Free Quote</a>
                             </div>
                         </div>
                     </div>
@@ -246,7 +246,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="" class="btn btn-primary py-3 px-5">Explore More</a>
+                        <a href="service.html" class="btn btn-primary py-3 px-5">Explore More</a>
                     </div>
                 </div>
             </div>
@@ -595,7 +595,7 @@
                             </div>
                         </div>
                         <div class="text-center border border-5 border-light border-top-0 p-4">
-                            <h5 class="mb-0">Adigwe Joseph</h5>
+                            <h5 class="mb-0">Joseph Adigwe</h5>
                             <small>Team Lead</small>
                         </div>
                     </div>
@@ -611,7 +611,7 @@
                             </div>
                         </div>
                         <div class="text-center border border-5 border-light border-top-0 p-4">
-                            <h5 class="mb-0">Hamid Arowona</h5>
+                            <h5 class="mb-0">Abdul-Hamid Arowona</h5>
                             <small>Financial Analyst</small>
                         </div>
                     </div>
@@ -627,7 +627,7 @@
                             </div>
                         </div>
                         <div class="text-center border border-5 border-light border-top-0 p-4">
-                            <h5 class="mb-0">Tokosi Iman</h5>
+                            <h5 class="mb-0">Iman Tokosi</h5>
                             <small>Design Expert</small>
                         </div>
                     </div>
@@ -659,7 +659,7 @@
                             </div>
                         </div>
                         <div class="text-center border border-5 border-light border-top-0 p-4">
-                            <h5 class="mb-0">Mahmoud Raheem</h5>
+                            <h5 class="mb-0">Mahmud Raheem</h5>
                             <small>Fabrication Officer</small>
                         </div>
                     </div>
@@ -698,7 +698,7 @@
                     <div class="testimonial-text text-center p-4">
                         <p>On Saturday there was a power outage in the school and I had a lot of work which I needed to get done but my laptop was dead but with the aid of the solar Trainer and a battery I was able to charge my laptop.</p>
                         <h5 class="mb-1">Eke Daniel</h5>
-                        <span class="fst-italic">Coursemate</span>
+                        <span class="fst-italic">Student</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
@@ -706,15 +706,15 @@
                     <div class="testimonial-text text-center p-4">
                         <p>During the power outage which occured over the weekend I was not severely affected thanks to the trainer which helped us charge our devices</p>
                         <h5 class="mb-1">Adigwe Joseph</h5>
-                        <span class="fst-italic">Coursemate</span>
+                        <span class="fst-italic">Student</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
                     <img class="img-fluid bg-light p-2 mx-auto mb-3" src="img/braimah.jpg" style="width: 90px; height: 90px;">
                     <div class="testimonial-text text-center p-4">
-                        <p>Yesterday my group members and I assembled in the electrical lab to work on our delivery drone. As we were troubleshooting so mechanical design flaws, we needed to drill holes through some of the propellers.The solar trainer enabled us to effectively use the hand drill and finish our work. This shows how important a device like this is to the school as we would have been stranded that day.</p>
+                        <p>Yesterday my group members and I assembled in the electrical lab to work on our delivery drone. As we were troubleshooting some mechanical design flaws, we needed to drill holes through some of the propellers.The solar trainer enabled us to effectively use the hand drill and finish our work. This shows how important a device like this is to the school as we would have been stranded that day.</p>
                         <h5 class="mb-1">Victor Braimah</h5>
-                        <span class="fst-italic">Coursemate</span>
+                        <span class="fst-italic">Student</span>
                     </div>
                 </div>
             </div>
